--- a/components/banner/style.css
+++ b/components/banner/style.css
@@ -11,11 +11,12 @@ html {
 } */
 
 .hero {
+    margin-top: 130px;
     background-image: url('../../img/banner1.jpg');
     /* cambia por tu imagen */
     background-size: cover;
     background-position: center;
-    height: 400px;
+    height: 500px;
     display: flex;
     align-items: center;
     justify-content: center;
